# werewolf-rs

./: Cargo.toml  Dockerfile.server  Dockerfile.web  Dockerfile_Client  Dockerfile_Server  Procfile  docker-compose.yml  heroku.yml
.github/workflows/: cargo-fmt.yml
client/: Cargo.toml  index.html
client/src/: client_network_manager.rs  main.rs  route.rs  view.rs
client/src/pages/: create_game.rs  game.rs  home.rs  mod.rs  not_found.rs
client/style/: 404.scss  index.scss
nginx/: nginx.conf  nginx.default.conf
server/: Cargo.toml
server/src/: game_lobby.rs  lobby_manager.rs  main.rs  server_network_manager.rs  util.rs
server/src/game/: client_manager.rs  game_runner.rs  mod.rs
server/src/game/roles/: mod.rs  spectator.rs  villager.rs  werewolf.rs
server/src/lobby/: client_manager.rs  game_runner.rs  mod.rs  roles.rs
werewolf-rs/: Cargo.toml
werewolf-rs/src/: game.rs  lib.rs  network_manager.rs  packet.rs  util.rs
werewolf-rs/src/packets/: packet.rs
