[package]
name = "werewolf-rs-server"
version = "0.1.0"
authors = ["Kai Berszin <mail@kaibersz.in>", "Daniel Ebert <daniel.ebert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
werewolf-rs = {path = "../werewolf-rs"}
tokio = { version = "1.6.1", features = ["full"] }
async-tungstenite = { version = "0.13.1", features = ["tokio-runtime"] }
futures = "0.3.15"
rand = "0.8.3"