[package]
name = "werewolf-rs"
version = "0.1.0"
authors = ["Kai Berszin <mail@kaibersz.in>", "Daniel Ebert <daniel.ebert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.64", features = ["derive"]}
serde_json = "1.0.64"
anyhow = "1.0.40"
rand = "0.8.3"